Mi version del proyecto  https://github.com/RyanFitzgerald/devportfolio

--- a/index.html
+++ b/index.html
@@ -25,22 +25,22 @@
         </div>
         <ul id="menu" class="shadow">
             <li>
-                <a href="#about">About</a>
+                <a href="#about">Sobre mi</a>
             </li>
             <li>
-                <a href="#experience">Experience</a>
+                <a href="#experience">Experiencia</a>
             </li>
             <li>
-                <a href="#education">Education</a>
+                <a href="#education">Educacion</a>
             </li>
             <li>
-                <a href="#projects">Projects</a>
+                <a href="#projects">Projectos</a>
             </li>
             <li>
                 <a href="#skills">Skills</a>
             </li>
             <li>
-                <a href="#contact">Contact</a>
+                <a href="#contact">Contacto</a>
             </li>
         </ul>
     </header>
@@ -48,9 +48,9 @@
 
     <div id="lead">
         <div id="lead-content">
-            <h1>Ryan Fitzgerald</h1>
-            <h2>Software Engineer</h2>
-            <a href="#" class="btn-rounded-white">Download Resume</a>
+            <h1>Natalia Moroni</h1>
+            <h2>Full Stack Developer</h2>
+            <a href="#" class="btn-rounded-white">Descargar Curriculum</a>
         </div>
         <!-- End #lead-content -->
 
@@ -69,7 +69,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <h2 class="heading">About Me</h2>
+                    <h2 class="heading">Sobre mi</h2>
                 </div>
                 <div class="col-md-8">
                     <p>
@@ -84,7 +84,7 @@
     <!-- End #about -->
 
     <div id="experience" class="background-alt">
-        <h2 class="heading">Experience</h2>
+        <h2 class="heading">Experiencia</h2>
         <div id="experience-timeline">
             <div data-date="September 2015 – September 2016">
                 <h3>Employer Name</h3>
@@ -114,7 +114,7 @@
     <!-- End #experience -->
 
     <div id="education">
-        <h2 class="heading">Education</h2>
+        <h2 class="heading">Educación</h2>
         <div class="education-block">
             <h3>University of Ottawa</h3>
             <span class="education-date">Sept 2016 - Sept 2017</span>
@@ -146,12 +146,12 @@
     <!-- End #education -->
 
     <div id="projects" class="background-alt">
-        <h2 class="heading">Projects</h2>
+        <h2 class="heading">Projectos</h2>
         <div class="container">
             <div class="row">
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project.jpg" />
+                        <img src="images/6502421p.png"  />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
@@ -166,9 +166,11 @@
                 <!-- End .project -->
 
                 <div class="project shadow-large">
-                    <div class="project-image">
-                        <img src="images/project.jpg" />
+                    <div class="project-image" >
+                        <img src="images/6502421p.png" />
+                        <div id="project-overlay"></div>
                     </div>
+                    
                     <!-- End .project-image -->
                     <div class="project-info">
                         <h3>Project Name Here</h3>
@@ -188,6 +190,7 @@
     <div id="skills">
         <h2 class="heading">Skills</h2>
         <ul>
+            <!--
             <li>JavaScript</li>
             <li>Python</li>
             <li>Ruby</li>
@@ -195,31 +198,32 @@
             <li>Node.js</li>
             <li>AngularJs</li>
             <li>React</li>
-            <li>Elixir</li>
+            <li>Elixir</li> 
             <li>Java</li>
             <li>C</li>
             <li>C#</li>
             <li>C++</li>
+            <li>Ruby on Rails</li> 
             <li>Ruby on Rails</li>
-            <li>JavaScript</li>
-            <li>Python</li>
-            <li>Ruby</li>
-            <li>Go</li>
-            <li>Node.js</li>
-            <li>AngularJs</li>
             <li>React</li>
-            <li>Elixir</li>
-            <li>Java</li>
+            <li>Elixir</li>            
             <li>C</li>
             <li>C#</li>
             <li>C++</li>
-            <li>Ruby on Rails</li>
+            -->
+            <li>Java</li>
+            <li>CSS</li>
+            <li>HTML</li>
+            <li>Bootstrap</li>
+            <li>JavaScrip</li>
+            <li>TypeScrip</li>
+            <li>AngularJs</li>
         </ul>
     </div>
     <!-- End #skills -->
 
     <div id="contact">
-        <h2>Get in Touch</h2>
+        <h2>Contacto</h2>
         <div id="contact-form">
             <form method="POST" action="https://formspree.io/email@email.com">
                 <input type="hidden" name="_subject" value="Contact request from personal website" />
@@ -237,7 +241,7 @@
             <div class="row">
                 <div class="col-sm-5 copyright">
                     <p>
-                        Copyright &copy; <span id="current-year">2022</span> YOUR NAME
+                        Copyright &copy; <span id="current-year">2022</span> NATALIA  A.  MORONI
                     </p>
                 </div>
                 <div class="col-sm-2 top">
@@ -248,23 +252,23 @@
                 <div class="col-sm-5 social">
                     <ul>
                         <li>
-                            <a href="https://github.com/" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+                            <a href="https://github.com/Aranthiel" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
                         </li>
-                        <li>
+                        <!--<li>
                             <a href="https://stackoverflow.com/" target="_blank"><i class="fa fa-stack-overflow" aria-hidden="true"></i></a>
+                        </li> -->
+                        <li>
+                            <a href="https://www.linkedin.com/in/nataliamoroni/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
                         </li>
                         <li>
-                            <a href="https://linkedin.com/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                            <a href="https://www.facebook.com/naty.prinn/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
                         </li>
                         <li>
-                            <a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                            <a href="https://twitter.com/Na_Moroni" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
                         </li>
-                        <li>
-                            <a href="https://twitter.com/" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-                        </li>
-                        <li>
+                        <!-- <li>
                             <a href="https://plus.google.com/" target="_blank"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
-                        </li>
+                        </li> -->
                     </ul>
                 </div>
             </div>
